--- a/css/footer_contact.css
+++ b/css/footer_contact.css
@@ -10,3 +10,13 @@
     max-width: 100%;
     height: 120px;
 }
+
+@media only screen and (max-width: 768px) {
+    #w_common_text-1560998617730 .pull-left {
+        width: 100%;
+        float: none;
+    }
+    #w_common_text-1560998617730 {
+        height: 198px;
+    }
+}
