--- a/css/page/page_Home.css
+++ b/css/page/page_Home.css
@@ -66,7 +66,7 @@ body,
     width: 25%;
     top: 20%;
     bottom: 20%;
-    background-image: url(//dfs.yun300.cn/group1/M00/02/74/rBQBHVx_KCaEBjuSAAAAAGrvM8w615.png);
+    /*background-image: url(//dfs.yun300.cn/group1/M00/02/74/rBQBHVx_KCaEBjuSAAAAAGrvM8w615.png);*/
     display: block;
     background-size: cover;
     z-index: 2;
@@ -80,7 +80,7 @@ body,
     width: 25%;
     top: 20%;
     bottom: 20%;
-    background-image: url(//dfs.yun300.cn/group1/M00/02/74/rBQBHVx_KCaEBjuSAAAAAGrvM8w615.png);
+    /*background-image: url(//dfs.yun300.cn/group1/M00/02/74/rBQBHVx_KCaEBjuSAAAAAGrvM8w615.png);*/
     display: block;
     background-size: cover;
     z-index: 2;
