--- a/css/animate.css
+++ b/css/animate.css
@@ -11762,7 +11762,7 @@ hr {
 @font-face {
     font-family: "iconfont";
     src: url('./iconfont.eot');
-    src: url('./iconfont.eot?#iefix') format('embedded-opentype'), url('./iconfont.woff') format('woff'), url('./iconfont.ttf') format('truetype'), url('./iconfont.svg#iconfont') format('svg')
+    src: url('./iconfont.eot?#iefix') format('embedded-opentype'), url('../font/iconfont.woff') format('woff'), url('./iconfont.ttf') format('truetype'), url('./iconfont.svg#iconfont') format('svg')
 }
 
 *[class~="iconfont"],
